[gd_scene load_steps=5 format=3 uid="uid://ct6d6kdknygnl"]

[ext_resource type="Texture2D" uid="uid://butsvck7ilv1o" path="res://Assets/gridBackground.png" id="1_fdtyn"]
[ext_resource type="Script" uid="uid://7glh06rxpts0" path="res://actor_builders/inventory_system/grid_slot_control.gd" id="2_u53nv"]
[ext_resource type="Texture2D" uid="uid://bud7gj80ocsfc" path="res://Assets/padlock.png" id="3_oqgua"]
[ext_resource type="Texture2D" uid="uid://c0x5n1le61l05" path="res://actor_builders/inventory_system/gear_sprites/Locked_Block.png.png" id="3_pkn38"]

[node name="GridSlotControl" type="TextureRect"]
z_index = 1
custom_minimum_size = Vector2(100, 100)
offset_right = 30.0
offset_bottom = 30.0
script = ExtResource("2_u53nv")

[node name="StatusFilter" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Padlock" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_pkn38")
expand_mode = 1

[node name="OldPadlock" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_oqgua")
expand_mode = 1

[node name="OldGridBackground" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(30, 30)
layout_mode = 0
offset_right = 30.0
offset_bottom = 30.0
texture = ExtResource("1_fdtyn")
expand_mode = 1

[node name="HoveredColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.2)

[node name="Node2D" type="Node2D" parent="."]
z_index = 10

[node name="GreyedColorRect" type="ColorRect" parent="Node2D"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 100)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.25098)
